@@ -1,2 +1,3 @@
 printme.yml etc/
 debian/*.list etc/freegeek-extras/apt/
+home/index.html usr/share/freegeek-extras/home/
