@@ -1,0 +1,7 @@
+<html>
+<body>
+<p>This computer was refurbished by <a href="http://freegeek.org">Free Geek</a>.</p>
+<p>It is running <a href="http://ubuntu.com">Ubuntu</a>.</p>
+<p>For help with Ubuntu, try <a href="https://help.ubuntu.com/10.04/index.html">https://help.ubuntu.com/10.04/index.html</a>.</p>
+</body>
+</html>
